Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49724

QQuickWidget does not update the QML scene when embedded in a QGraphicsScene

    XMLWordPrintable

Details

    • 9e0e47ffdbde58ec6ae3031c479d416e6e3ea174

    Description

      I have attached an example which shows an embedded QML WebView (WebKit version) which displays a YouTube page (because it has dynamic content - the video so works well for the example). The view only updates while the MainWindow is being resized.

      This problem extends to other use cases, such as embedding a QML video player or other content which should be continuously updating it's display. As far as I can tell, this will soon be the only way to embed web content and videos across both desktop and mobile operating systems (Android has no multimediawidgets, webkit is being removed and webengine is not supported on mobile, leaving only the Qt WebView which is QML only).

      The example uses a QQuickWidget but we found the same behavior with QQuickView.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            aelm Andrew Forrest
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes