Make QQuickWidget update inside a proxy widget

Performance will be bad but this allows having simple scenes in a
QQuickWidget embedded into a QGraphicsView (ouch).

This kind of setup is strongly discouraged but QWidget already has the
readback-based fallback for render(), so we only need to add the
update re-routing to the proxy widget.

Task-number: QTBUG-49724
Change-Id: I1c80cb0a7b401327304ec7b92c77dc654d843b33
Reviewed-by: Paul Olav Tvete <paul.tvete@theqtcompany.com>